Update docs with the POST endpoint
